--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1{
 	/*meletakkan form ke tengah*/
 	margin: 80px auto;
 	padding: 30px 20px;
+	border-radius: 3%;
 }
  
 label{
@@ -42,7 +43,7 @@ label{
 	font-size: 11pt;
 	width: 100%;
 	border: none;
-	border-radius: 3px;
+	border-radius: 5px;
 	padding: 10px 20px;
 }
  
